--- a/docencia/Aprendizaje-explicito/index.html
+++ b/docencia/Aprendizaje-explicito/index.html
@@ -430,7 +430,8 @@ Por ejemplo, este tipo de aprendizaje nos permite adquirir información sobre pe
   </p>
 
 
-    <p class="archive__item-excerpt" itemprop="description">La didáctica (del adj. didáctico, del griego διδακτικός [didaktikós]).1​2​ Entre los pensadores griegos, aparecieron los primeros acercamientos etimológicos ...</p>
+    <p class="archive__item-excerpt" itemprop="description">La didáctica (del adj. didáctico, del griego διδακτικός [didaktikós]).
+    Entre los pensadores griegos, aparecieron los primeros acercamientos etimológicos ...</p>
   </article>
 </div>
 
@@ -472,7 +473,7 @@ Por ejemplo, este tipo de aprendizaje nos permite adquirir información sobre pe
     <p class="archive__item-excerpt" itemprop="description">Tercer Post
 
 
-Titulo: Testeando Tablas
+Testeando Tablas
 —
 </p>
   </article>
