--- a/docencia/didactica/index.html
+++ b/docencia/didactica/index.html
@@ -515,7 +515,7 @@ Testeando Tablas
   </p>
 
 
-    <p class="archive__item-excerpt" itemprop="description">Segundo post tal y cual
+    <p class="archive__item-excerpt" itemprop="description">Este es el segundo post
 
 </p>
   </article>
