--- a/docencia/clase/index.html
+++ b/docencia/clase/index.html
@@ -584,7 +584,7 @@ Por ejemplo, este tipo de aprendizaje ...</p>
   </p>
 
 
-    <p class="archive__item-excerpt" itemprop="description">Segundo post tal y cual
+    <p class="archive__item-excerpt" itemprop="description">Este es el segundo post
 
 </p>
   </article>
