--- a/docencia/Aprendizaje-explicito/index.html
+++ b/docencia/Aprendizaje-explicito/index.html
@@ -470,11 +470,7 @@ Por ejemplo, este tipo de aprendizaje nos permite adquirir información sobre pe
   </p>
 
 
-    <p class="archive__item-excerpt" itemprop="description">Tercer Post
-
-
-Testeando Tablas
-—
+    <p class="archive__item-excerpt" itemprop="description">El tercer post
 </p>
   </article>
 </div>
